<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo_main_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_main_small"
        android:contentDescription="@string/logo_small"
        app:layout_constraintBottom_toTopOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:text="@string/you_re_back"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/create_account_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_main_small" />

    <TextView
        android:id="@+id/create_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/login_an_account"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="367dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/create_account_text"
        android:gravity="center_vertical|center_horizontal"
        android:drawableStart="@drawable/ic_email"
        android:textColor="@color/black"
        android:hint="@string/your_email_text"
        android:tint="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="367dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@color/light_gray"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_password"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/black"
        android:hint="@string/your_password_text"
        android:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />


    <RadioButton
        android:id="@+id/logInButton"
        android:button="@null"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="367dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/gradient_background_image"
        android:text="@string/Log_in"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />



</androidx.constraintlayout.widget.ConstraintLayout>